feat: transaction analyzer endpoint
